# styx-portal

./: .env.example  .gitignore  .gitlab-ci.yml  .releaserc.github.json  .releaserc.gitlab.json  .releaserc.json  .trivyignore  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.yml  package-lock.json  package.json  release.config.js  zensical.toml
.github/: dependabot.yml
agent/: clipboard_bridge.py  engine.py  enroll.sh  gateway.py  (+3 more)
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/middleware/: rate_limit.py  security_headers.py
backend/app/routers/: agent.py  audit.py  auth.py  enroll.py  images.py  instances.py  oauth.py  oauth_admin.py  registry.py  system_settings.py  templates.py  users.py  workstations.py
backend/app/security/: crypto.py  csrf.py  deps.py  oauth.py  passwords.py  setup_gate.py  tokens.py
backend/app/services/: abuse.py  artifacts.py  audit.py  diagnostics.py  docker_args.py  docker_manager.py  federation.py  health_store.py  lan_tls.py  metrics_store.py  pull_progress.py  route_writer.py  screenshot.py  session_monitor.py  settings_store.py  traefik_labels.py  workstations.py
backend/tests/: conftest.py  test_abuse.py  test_artifacts.py  test_audit.py  test_auth_deps.py  test_auth_lockout.py  test_auth_refresh_reuse.py  test_auth_router.py  test_capture_loop.py  test_config.py  test_crypto.py  test_csrf.py  test_csrf_refresh.py  test_database_migrations.py  test_diagnostics.py  test_diagnostics_api.py  test_docker_args.py  test_docker_manager.py  test_docker_manager_new_opts.py  test_federation.py  test_health_store.py  test_instance_launch_opts.py  test_instance_quota.py  test_instances_api.py  test_lan_tls.py  test_link.py  test_migration_template_columns.py  test_models.py  test_models_template_fields.py  test_oauth_admin.py  test_oauth_helpers.py  test_oauth_models.py  test_oauth_router.py  test_ownership.py  test_passwords.py  test_pull_progress.py  test_rate_limit.py  test_redirect.py  test_registry.py  test_route_writer.py  (+30 more)
(+244 files in other folders)
