[project]
name = "styx-portal-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.22",
    "aiosqlite>=0.20.0",
    "docker>=7.1.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "pyyaml>=6.0",
    "playwright>=1.49.0",
    "pyjwt>=2.13.0",
    "argon2-cffi>=23.1.0",
    "authlib>=1.3.2",
    "cryptography>=43.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "aiohttp>=3.9",
    "mypy>=1.13.0",
    "bandit>=1.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*", "tests*", "templates*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
files = ["app"]
ignore_missing_imports = true
follow_imports = "silent"
warn_unused_ignores = false
# Non-blocking baseline: CI runs mypy with continue-on-error.
# Ratchet plan: clear errors, then flip CI gate to blocking and tighten below.
# disallow_untyped_defs = true   # enable when ratcheting

[tool.bandit]
exclude_dirs = ["tests", ".venv", "data"]
# B101 assert_used is noise in this codebase's test-adjacent helpers
skips = ["B101"]
